base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend-rollout
spec:
  strategy:
    canary:
      canaryService: frontend-service-canary
      stableService: frontend-service-stable
      trafficRouting:
        nginx:
          stableIngress: rollouts-frontend-stable-ingress
      steps:
      - setWeight: 5
      - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: frontend-rollout
  template:
    metadata:
      labels:
        app: frontend-rollout
    spec:
      containers:
        - name: app
          image: argoproj/rollouts-demo:blue
          ports:
          - name: http
