base/rollout-ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-frontend-stable
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rollouts-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
            name: frontend-service
            port:
              number: 80
